adding volume mount and override command to the docker compose file. added shell script to run the todo app under node-supervisor

--- a/client/html/hello-docker.html
+++ b/client/html/hello-docker.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Welcome</title>
-		<h1>OMG HAI 2 U!</h1>
+		<h1>OMG HAI 22!</h1>
 		<img src="https://www.docker.com/sites/default/files/Engine.png" alt="" />
 	</head>
 	<body>
